# Classifying-Stars-Galaxies-and-Quasars-using-Photometric-Data

./: .gitignore  NN_model.h5  README.md  Untitled.ipynb  XGB_model.pkl  comparisons.ipynb  helping_functions.py  mean.csv  production.ipynb  pyproject.toml  random_testing_data.csv  standard_deviation.csv
02__Data_Analysis__Training__Saving_Models/: helping_functions.py  photometry.ipynb
03__Pre_Deployment/: pseudo_deployment_script.py
03__Pre_Deployment/01__models/: XGB_model.pkl
03__Pre_Deployment/02__supporting_csv_files/: mean.csv  random_testing_data.csv  random_validation_data_pr.csv
03__Pre_Deployment/03__pre_production_notebooks/: 01__comparing_models.ipynb  02__pre_production_testing.ipynb
04__Deploying_on_Amazon_Aws_Lambda/: Dockerfile  app.py  local_image_testing.txt  requirements.txt
04__Deploying_on_Amazon_Aws_Lambda/02__supporting_csv_files/: best_weights.csv  standard_deviation.csv
04__Deployment_aws_lambda/: Dockerfile
04__Deployment_aws_lambda/01__models/: NN_model.keras
artifact/: Dockerfile
artifact/01__models/: gmm_model.pkl
my_log_dir/train/: events.out.tfevents.1696304675.DESKTOP-D8AMTUC.6616.0.v2  events.out.tfevents.1696401158.DESKTOP-D8AMTUC.2168.0.v2  events.out.tfevents.1696575440.DESKTOP-D8AMTUC.19980.0.v2
my_log_dir/validation/: events.out.tfevents.1696304677.DESKTOP-D8AMTUC.6616.1.v2  events.out.tfevents.1696401162.DESKTOP-D8AMTUC.2168.1.v2  (+1 more)
production/: best_weights.csv  gmm_model.pkl  helping_functions.py  production.ipynb  random_validation_data_pr.csv  untitled.ipynb
