[project]
name = "classifying-quasars-galaxies-stars-using-photometry"
version = "0.1.0"
description = ""
authors = [
    {name = "Ans Imran",email = "ansimran18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow (==2.16.1)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "mangum (>=0.19.0,<0.20.0)"
]

[tool.poetry]
packages = [{include = "classifying_quasars_galaxies_stars_using_photometry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
